# netlink_listener

./: CMakeLists.txt  netman.cpp
include/: ICommand.h  get_interface_command.h  listen_events_command.h  netlink_socket.h  set_interface_command.h  utils.h
src/: get_interface_command.cpp  listen_events_command.cpp  main.cpp  netlink_socket.cpp  set_interface_command.cpp  utils.cpp
